--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,5 @@
 #app{
-  margin: 200px auto;
+  margin: 100px auto;
   text-align: center;
   font-size: 16px;
 }
@@ -27,4 +27,8 @@ h2{
   left: 50%;
   font-size: 16px;
   line-height: 32px;
-    }
+}
+#todo{
+  text-align: center;
+  margin: 10px auto;
+}
